--- a/src/layouts/DashboardLayout.astro
+++ b/src/layouts/DashboardLayout.astro
@@ -143,7 +143,7 @@ const {
       // Listen for OS theme changes
       window
         .matchMedia('(prefers-color-scheme: dark)')
-        .addEventListener('change', (event: Event) => {
+        .addEventListener('change', (event) => {
           const theme = getTheme()
           if (theme === 'system') {
             applyTheme('system')
